user-modal and api finish

--- a/index.html
+++ b/index.html
@@ -19,9 +19,26 @@
             <img src="./Assets/images/filmalisalogo.svg" alt="" />
             <h1>filmalisa</h1>
           </figure>
-          <nav class="header-btn">
-            <a href="./Pages/Client/login.html">Sign in</a>
-          </nav>
+          <div class="user-login">
+            <div class="user-div">
+              <img
+                src="./Assets/icons/login.svg"
+                alt="Example Image"
+                class="user-img"
+                id="user-id-image"
+              />
+              <p class="user-p" id="user-id-name">Elmir Ahmadov</p>
+            </div>
+            <div class="header-btn user-btn">
+              <a href="./Pages/Client/login.html">Sign in</a>
+            </div>
+            <div class="user-modal" id="user-modal">
+              <ul>
+                <li>Settings <span>⚙️</span></li>
+                <li>Logout <span>🚪</span></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -57,7 +74,7 @@
               src="./Assets/images/loading-tv.png"
               alt="tv-img"
               class="loading-tv-frame"
-              style="width: 500px; height: 350px;"
+              style="width: 500px; height: 350px"
             />
             <img
               src="./Assets/images/loading-tv.gif"
@@ -75,7 +92,7 @@
               src="./Assets/images/loading-tv-2.webp"
               alt="tv-img"
               class="loading-tv-frame-2"
-              style="width: 500px; height: 350px;"
+              style="width: 500px; height: 350px"
             />
             <img
               src="./Assets/images/loading-tv-2.gif"
@@ -102,7 +119,11 @@
           </p>
         </div>
         <figure>
-          <img src="./Assets/icons/landing-page/kids.svg" alt="" style="width: 500px; height: 350px;" />
+          <img
+            src="./Assets/icons/landing-page/kids.svg"
+            alt=""
+            style="width: 500px; height: 350px"
+          />
         </figure>
       </section>
 
