created new task file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./Styles/Client/landing-page.css" />
     <link
       rel="icon"
-      href="../../Assets/images/logo_with_uploaded_image (1).png"
+      href="./Assets/images/logo_with_uploaded_image (1).png"
       type="image/png"
     />
   </head>
@@ -27,7 +27,7 @@
                 class="user-img"
                 id="user-id-image"
               />
-              <p class="user-p" id="user-id-name">Elmir Ahmadov</p>
+              <p class="user-p" id="user-id-name"></p>
             </div>
             <div class="header-btn user-btn">
               <a href="./Pages/Client/login.html">Sign in</a>
