index-html bugs fix

--- a/index.html
+++ b/index.html
@@ -34,8 +34,22 @@
             </div>
             <div class="user-modal" id="user-modal">
               <ul>
-                <li>Settings <span>⚙️</span></li>
-                <li>Logout <span>🚪</span></li>
+                <li>
+                  Settings
+                  <img
+                    src="./Assets/images/settings.png"
+                    alt=""
+                    style="width: 20px; height: 20px; margin: 0 2px"
+                  />
+                </li>
+                <li>
+                  Logout
+                  <img
+                    src="./Assets/./images/logout.png"
+                    alt=""
+                    style="width: 19px; height: 19px"
+                  />
+                </li>
               </ul>
             </div>
           </div>
