finished home page api's

--- a/Pages/Client/home.html
+++ b/Pages/Client/home.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="../../Styles/Client/home.css" />
+    <link
+    rel="icon"
+    href="../../Assets/images/logo_with_uploaded_image (1).png"
+    type="image/png"
+  />
   </head>
   <body>
     <div class="left">
@@ -12,25 +17,25 @@
         <img src="../../Assets/icons/user-home/logo-user.svg" alt="Logo" />
       </div>
       <div class="sidebar">
-        <a href="#" class="icon">
+        <a href="./home.html" class="icon">
           <img src="../../Assets/icons/user-home/icon-1.svg" alt="Home" />
         </a>
-        <a href="#" class="icon">
+        <a href="./search.html" class="icon">
           <img src="../../Assets/icons/user-home/icon-2.svg" alt="Movies" />
         </a>
-        <a href="#" class="icon">
+        <a href="./account.html" class="icon">
           <img src="../../Assets/icons/user-home/icon-3.svg" alt="TV Shows" />
         </a>
-        <a href="#" class="icon">
+        <a href="./favorite.html" class="icon">
           <img src="../../Assets/icons/user-home/icon-4.svg" alt="Favorites" />
         </a>
       </div>
     </div>
 
     <div class="right">
-      <div class="carousel-container">
+      <div class="carousel-container" >
         <div class="carousel">
-          <div class="slide slide-1">
+          <!-- <div class="slide slide-1">
             <div class="text-overlay">
               <span class="category">Science Fiction</span>
               <h1>Godzilla vs. Kong</h1>
@@ -63,16 +68,16 @@
               </p>
               <button class="watch-btn">Watch Now</button>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="carousel-buttons">
-          <button class="dot active" data-slide="0"></button>
+          <!-- <button class="dot active" data-slide="0"></button>
           <button class="dot" data-slide="1"></button>
-          <button class="dot" data-slide="2"></button>
+          <button class="dot" data-slide="2"></button> -->
         </div>
       </div>
 
-      <div class="category-section">
+      <!-- <div class="category-section">
         <div class="category-header">
           <p class="category-P">Action</p>
           <div class="chevron-icon"></div>
@@ -86,6 +91,7 @@
             />
             <div class="movie-details">
               <span class="movie-category">Fantasy</span>
+              <div style="padding-top: 10px;">★★★★★★</div>
               <p class="movie-title">Wonder Woman 1984</p>
             </div>
           </div>
@@ -97,6 +103,31 @@
             />
             <div class="movie-details">
               <span class="movie-category">Fantasy</span>
+              <div style="padding-top: 10px;">★★★★★★</div>
+              <p class="movie-title">Zack Snyder's Justice League</p>
+            </div>
+          </div>
+          <div class="movie-card">
+            <img
+              src="../../Assets/icons/user-home/image-film-1.svg"
+              alt="Wonder Woman 1984"
+              class="movie-image"
+            />
+            <div class="movie-details">
+              <span class="movie-category">Fantasy</span>
+              <div style="padding-top: 10px;">★★★★★★</div>
+              <p class="movie-title">Wonder Woman 1984</p>
+            </div>
+          </div>
+          <div class="movie-card">
+            <img
+              src="../../Assets/icons/user-home/image-film-2.svg"
+              alt="Wonder Woman 1984"
+              class="movie-image"
+            />
+            <div class="movie-details">
+              <span class="movie-category">Fantasy</span>
+              <div style="padding-top: 10px;">★★★★★★</div>
               <p class="movie-title">Zack Snyder's Justice League</p>
             </div>
           </div>
@@ -132,8 +163,13 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
+   
+   <div class="main-container"></div>
+
     </div>
+
+
 
     <script src="../../Scripts/Client/home.js"></script>
   </body>
