api and js edit

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
           <form action="">
             <input type="email" placeholder="Email address" id="emailInput" />
             <button class="started-btn" id="startBtn" type="button">
-              Get Started >
+              Get Started
+              <img src="./Assets/icons/landing-page/getstarted.svg" alt="" />
             </button>
           </form>
         </div>
@@ -146,7 +147,7 @@
         <form id="contactForm" class="contact_us-input">
           <input type="text" id="fullname" placeholder="Fullname" />
           <input type="email" id="email" placeholder="Email address" />
-          <textarea id="reason" placeholder="Reason"></textarea>
+          <textarea id="reason" placeholder="Reason" maxlength="200"></textarea>
           <button type="submit" class="send-btn">Send</button>
         </form>
       </section>
