client-details api (30%)

--- a/Pages/Client/details-1.html
+++ b/Pages/Client/details-1.html
@@ -71,7 +71,7 @@
               <div class="film-desc">
                 <div class="film-text-header">
                   <div class="film-text-header-left">
-                    <p>have you seen our robot?</p>
+                    <p>Click to watch and join the fun</p>
                     <a
                       href="https://www.diziyou.live/lost-in-space/"
                       target="_blank"
@@ -130,15 +130,15 @@
                     <p>Returning Series</p>
                   </div>
                   <div class="episodes">
-                    <span>No. of episodes</span>
-                    <p>20</p>
+                    <span>No. of season</span>
+                    <p>1</p>
                   </div>
                   <div class="first-date">
-                    <span>First air date</span>
+                    <span>Date added</span>
                     <p>2018-04-13</p>
                   </div>
                   <div class="last-date">
-                    <span>Last air date</span>
+                    <span>Added time</span>
                     <p>2019-04-24</p>
                   </div>
                   <div class="run-time">
@@ -152,7 +152,7 @@
                 </div>
               </div>
               <div class="film-actors">
-                <span class="actors-head">top cast</span>
+                <span class="actors-head">Top cast</span>
                 <div class="actors-slider">
                   <div class="actor-slides">
                     <div class="actor">
@@ -665,9 +665,18 @@
         </section>
       </div>
       <div class="film-overlay"></div>
+      <!-- ......  -->
       <div class="film-modal">
         <div class="film-modal-overlay"></div>
-        <img src="../../Assets/images/lost-in-space.jpeg" alt="" />
+        <iframe
+          src="https://www.youtube.com/embed/WegqhgGdTYA?si=TWL-xHK9P2FXTdfG"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          style="width: 100%; height: 100%"
+          class="iframe-fragman"
+        ></iframe>
         <div class="film-modal-info">
           <span class="film-modal-name">Lose in space</span>
           <button class="film-modal-start">
@@ -687,6 +696,8 @@
           </button>
         </div>
       </div>
+
+      <!-- ......  -->
     </main>
     <script src="../../Scripts/Client/details.js"></script>
   </body>
