--- a/Pages/Client/favorite.html
+++ b/Pages/Client/favorite.html
@@ -43,8 +43,8 @@
           <p class="section-title">Favorite movies</p>
           <div class="direction-icon"></div>
         </div>
-        <div class="content-container">
-          <div class="content-card">
+        <div class="content-container" id="contentContainer">
+          <!-- <div class="content-card">
             <img
               src="../../Assets/icons/user-home/image-film-3.svg"
               alt="Wonder Woman 1984"
@@ -65,7 +65,7 @@
               <span class="content-category">Sci-Fi & Fantasy</span>
               <p class="content-title">The Falcon and the Winter Soldier</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
