Client-landing_page responsive done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Landing-page</title>
     <link rel="stylesheet" href="./Styles/Client/landing-page.css" />
     <link
+      rel="stylesheet"
+      href="./Styles/Responsive/Client/landing-page-responsive.css"
+    />
+    <link
       rel="icon"
       href="./Assets/images/logo_with_uploaded_image (1).png"
       type="image/png"
@@ -39,7 +43,6 @@
                   <img
                     src="./Assets/images/settings.png"
                     alt=""
-                    style="width: 20px; height: 20px; margin: 0 2px"
                   />
                 </li>
                 <li>
@@ -47,7 +50,6 @@
                   <img
                     src="./Assets/./images/logout.png"
                     alt=""
-                    style="width: 19px; height: 19px"
                   />
                 </li>
               </ul>
@@ -89,7 +91,6 @@
               src="./Assets/images/loading-tv.png"
               alt="tv-img"
               class="loading-tv-frame"
-              style="width: 500px; height: 350px"
             />
             <img
               src="./Assets/images/loading-tv.gif"
@@ -107,7 +108,6 @@
               src="./Assets/images/loading-tv-2.webp"
               alt="tv-img"
               class="loading-tv-frame-2"
-              style="width: 500px; height: 350px"
             />
             <img
               src="./Assets/images/loading-tv-2.gif"
@@ -137,7 +137,6 @@
           <img
             src="./Assets/icons/landing-page/kids.svg"
             alt=""
-            style="width: 500px; height: 350px"
           />
         </figure>
       </section>
