--- a/Pages/Client/details-1.html
+++ b/Pages/Client/details-1.html
@@ -34,7 +34,7 @@
 
     <main>
       <section id="film-bg-image">
-        <div class="user-photo">
+        <div class="user-photo" id="user-photo">
           <a href="../Client/account.html" class="user-profile-photo">
             <img src="../../Assets/images/sarkhan-teacher.jpeg" alt="" />
           </a>
@@ -71,15 +71,11 @@
               <div class="film-desc">
                 <div class="film-text-header">
                   <div class="film-text-header-left">
-                    <p>Click to watch and join the fun</p>
-                    <a
-                      href="https://www.diziyou.live/lost-in-space/"
-                      target="_blank"
-                      >Watch Link</a
-                    >
+                    <p>Don't Miss Out, Click Here!</p>
+                    <a target="_blank">Watch Link</a>
                   </div>
                   <div class="film-text-header-right">
-                    <button>
+                    <button id="favorite-btn" data-movie-id="">
                       <svg
                         width="16"
                         height="16"
@@ -221,7 +217,7 @@
           <form action="">
             <div class="form-comment">
               <div class="user-comment-photo">
-                <img src="../../Assets/images/sarkhan-teacher.jpeg" alt="" />
+                <img src="" alt="" />
               </div>
               <textarea
                 class="auto-break"
@@ -231,7 +227,7 @@
                 maxlength="3000"
               ></textarea>
             </div>
-            <button>
+            <button id="button-submit">
               <svg
                 width="35"
                 height="38"
@@ -239,7 +235,7 @@
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
               >
-                <g clip-path="url(#clip0_109_2993)">
+                <g clip-path="">
                   <path
                     d="M3.61153 33.25L32.7428 19L3.61153 4.75L3.59766 15.8333L24.4156 19L3.59766 22.1667L3.61153 33.25Z"
                     fill="#F2F2F2"
@@ -258,7 +254,7 @@
           </form>
           <p class="alert-comment">The maximum can be 3000 characters!</p>
           <div class="film-comments">
-            <div class="comment">
+            <!-- <div class="comment">
               <div class="user-info">
                 <div class="user">
                   <img src="../../Assets/images/sarkhan-teacher.jpeg" alt="" />
@@ -302,106 +298,18 @@
                 soon. Perhaps you can give me an insight on where I can learn
                 React? Thanks!
               </p>
-            </div>
-            <div class="comment">
-              <div class="user-info">
-                <div class="user">
-                  <img src="../../Assets/images/sarkhan-teacher.jpeg" alt="" />
-                  <span>Sarkhan Rahimli</span>
-                </div>
-                <p>18:32 today</p>
-              </div>
-              <p>
-                Woah, your project looks awesome! How long have you been coding
-                for? I’m still new, but think I want to dive into React as well
-                soon. Perhaps you can give me an insight on where I can learn
-                React? Thanks!
-              </p>
-            </div>
-            <div class="comment">
-              <div class="user-info">
-                <div class="user">
-                  <img src="../../Assets/images/sarkhan-teacher.jpeg" alt="" />
-                  <span>Sarkhan Rahimli</span>
-                </div>
-                <p>18:32 today</p>
-              </div>
-              <p>
-                Woah, your project looks awesome! How long have you been coding
-                for? I’m still new, but think I want to dive into React as well
-                soon. Perhaps you can give me an insight on where I can learn
-                React? Thanks!
-              </p>
-            </div>
-            <div class="comment">
-              <div class="user-info">
-                <div class="user">
-                  <img src="../../Assets/images/sarkhan-teacher.jpeg" alt="" />
-                  <span>Sarkhan Rahimli</span>
-                </div>
-                <p>18:32 today</p>
-              </div>
-              <p>
-                Woah, your project looks awesome! How long have you been coding
-                for? I’m still new, but think I want to dive into React as well
-                soon. Perhaps you can give me an insight on where I can learn
-                React? Thanks!
-              </p>
-            </div>
-            <div class="comment">
-              <div class="user-info">
-                <div class="user">
-                  <img src="../../Assets/images/sarkhan-teacher.jpeg" alt="" />
-                  <span>Sarkhan Rahimli</span>
-                </div>
-                <p>18:32 today</p>
-              </div>
-              <p>
-                Woah, your project looks awesome! How long have you been coding
-                for? I’m still new, but think I want to dive into React as well
-                soon. Perhaps you can give me an insight on where I can learn
-                React? Thanks!
-              </p>
-            </div>
-            <div class="comment">
-              <div class="user-info">
-                <div class="user">
-                  <img src="../../Assets/images/sarkhan-teacher.jpeg" alt="" />
-                  <span>Sarkhan Rahimli</span>
-                </div>
-                <p>18:32 today</p>
-              </div>
-              <p>
-                Woah, your project looks awesome! How long have you been coding
-                for? I’m still new, but think I want to dive into React as well
-                soon. Perhaps you can give me an insight on where I can learn
-                React? Thanks!
-              </p>
-            </div>
-            <div class="comment">
-              <div class="user-info">
-                <div class="user">
-                  <img src="../../Assets/images/sarkhan-teacher.jpeg" alt="" />
-                  <span>Sarkhan Rahimli</span>
-                </div>
-                <p>18:32 today</p>
-              </div>
-              <p>
-                Woah, your project looks awesome! How long have you been coding
-                for? I’m still new, but think I want to dive into React as well
-                soon. Perhaps you can give me an insight on where I can learn
-                React? Thanks!
-              </p>
-            </div>
+            </div> -->
           </div>
-          <div class="load-more">
+
+          <div class="film-comments"></div>
+          <div class="load-more" style="display: none">
             <button class="load-more-btn">Load more</button>
           </div>
         </section>
         <section id="smilar-movies">
           <div class="smilar-head">
-            <a href="#" class="smilar-link"
-              >smilar movies
+            <a href="#" class="smilar-link">
+              Thriller
               <svg
                 width="35"
                 height="35"
@@ -420,7 +328,7 @@
           </div>
           <div class="movies-slider">
             <div class="movies-slides">
-              <div class="movie">
+              <!-- <div class="movie">
                 <img src="../../Assets/images/details-got.jpeg" alt="" />
                 <div class="movie-overlay"></div>
                 <div class="movie-desc">
@@ -659,7 +567,7 @@
                   </div>
                   <p class="smilar-movie-name">Game of thrones</p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
