Home page responsive 80% done

--- a/Pages/Client/home.html
+++ b/Pages/Client/home.html
@@ -6,6 +6,10 @@
     <title>Home</title>
     <link rel="stylesheet" href="../../Styles/Client/home.css" />
     <link
+      rel="stylesheet"
+      href="../../Styles/Responsive/Client/home-responsive.css"
+    />
+    <link
       rel="icon"
       href="../../Assets/images/logo_with_uploaded_image (1).png"
       type="image/png"
@@ -14,7 +18,9 @@
   <body>
     <div class="left">
       <div class="logo-div">
-        <img src="../../Assets/icons/user-home/logo-user.svg" alt="Logo" />
+        <a href="../../index.html">
+          <img src="../../Assets/icons/user-home/logo-user.svg" alt="Logo" />
+        </a>
       </div>
       <div class="sidebar">
         <a href="./home.html" class="icon">
