--- a/Pages/Client/login.html
+++ b/Pages/Client/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="../../Styles/Client/login.css" />
+    <link rel="stylesheet" href="../../Styles/Responsive/Client/login-responsive.css">
     <link
       rel="icon"
       href="../../Assets/images/logo_with_uploaded_image (1).png"
@@ -14,7 +15,7 @@
   <body class="bg-dark text-light">
     <main class="client-login">
       <div class="right-part">
-        <img src="../../Assets/images/Login_logo.svg" alt="" />
+        <img src="../../Assets/images/Login_logo.svg" alt="" class="login-logo" />
         <h1>Filmalisa</h1>
 
         <h2>Login</h2>
