--- a/Pages/Client/details-1.html
+++ b/Pages/Client/details-1.html
@@ -606,6 +606,27 @@
       </div>
 
       <!-- ......  -->
+
+      <div class="modal-remove" id="modal-remove" style="display: none">
+        <div class="modal-content-2">
+          <div class="comment-wrapper2">
+            <p id="modalComment-2">
+              Are you sure you want to remove this comment?
+            </p>
+          </div>
+          <div class="modal-buttons">
+            <button id="yes-btn" class="modal-btn">Yes</button>
+            <button id="no-btn" class="modal-btn" onclick="closeRemoveModal()">
+              No
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="popup" id="popup">
+        <p id="pop-p"></p>
+        <button class="close-btn" onclick="closePopup()">Close</button>
+      </div>
     </main>
     <script src="../../Scripts/Client/details.js"></script>
   </body>
