Style files and Registration page responsive done.

--- a/Pages/Client/login.html
+++ b/Pages/Client/login.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="../../Styles/Client/login.css" />
-    <link rel="stylesheet" href="../../Styles/Responsive/Client/login-responsive.css">
+    <link rel="stylesheet" href="../../Styles/Client/login-register.css" />
+    <link
+      rel="stylesheet"
+      href="../../Styles/Responsive/Client/login-register-responsive.css"
+    />
     <link
       rel="icon"
       href="../../Assets/images/logo_with_uploaded_image (1).png"
@@ -15,7 +18,11 @@
   <body class="bg-dark text-light">
     <main class="client-login">
       <div class="right-part">
-        <img src="../../Assets/images/Login_logo.svg" alt="" class="login-logo" />
+        <img
+          src="../../Assets/images/Login_logo.svg"
+          alt=""
+          class="login-logo"
+        />
         <h1>Filmalisa</h1>
 
         <h2>Login</h2>
@@ -46,7 +53,7 @@
             <img
               src="../../Assets/icons/Client-login/right-icon.svg"
               alt="password-right"
-              class="input-icon"
+              class="pass-icon"
             />
           </div>
           <nav>
