--- a/Pages/Client/register.html
+++ b/Pages/Client/register.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link rel="stylesheet" href="../../Styles/Client/register.css" />
+    <link rel="stylesheet" href="../../Styles/Client/login-register.css" />
+    <link rel="stylesheet" href="../../Styles/Responsive/Client/login-register-responsive.css">
     <link
       rel="icon"
       href="../../Assets/images/logo_with_uploaded_image (1).png"
@@ -14,7 +15,7 @@
   <body class="bg-dark text-light">
     <main class="client-login">
       <div class="right-part">
-        <img src="../../Assets/images/Login_logo.svg" alt="" />
+        <img src="../../Assets/images/Login_logo.svg" class="register-logo" alt="" />
         <h1>Filmalisa</h1>
 
         <h2>Register</h2>
@@ -53,7 +54,7 @@
             <img
               src="../../Assets/icons/Client-login/right-icon.svg"
               alt="password-right"
-              class="input-icon"
+              class="pass-icon"
             />
           </div>
           <nav>
