Update navigation links in details page for improved routing

--- a/Pages/Client/details-1.html
+++ b/Pages/Client/details-1.html
@@ -20,10 +20,10 @@
         <a href="../Client/home.html" class="icon">
           <img src="../../Assets/icons/user-home/icon-1.svg" alt="Home" />
         </a>
-        <a href="#" class="icon">
+        <a href="../Client/search.html" class="icon">
           <img src="../../Assets/icons/user-home/icon-2.svg" alt="Movies" />
         </a>
-        <a href="#" class="icon">
+        <a href="../Client/account.html" class="icon">
           <img src="../../Assets/icons/user-home/icon-3.svg" alt="TV Shows" />
         </a>
         <a href="../Client/favorite.html" class="icon">
