style: improve layout and styling in details and home pages

--- a/Pages/Client/details-1.html
+++ b/Pages/Client/details-1.html
@@ -40,7 +40,7 @@
           </a>
         </div>
         <div class="back-div"></div>
-        <img class="film-bg" src="../../Assets/images/details-bg.jpeg" alt="" />
+        <img class="film-bg" src="" alt="" />
       </section>
       <div class="container">
         <section id="film">
