Finished responsive design

--- a/Pages/Client/details-1.html
+++ b/Pages/Client/details-1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Details-1</title>
     <link rel="stylesheet" href="../../Styles/Client/details.css" />
+    <link rel="stylesheet" href="../../Styles/Responsive/Client/details-responsive.css">
     <link
       rel="icon"
       href="../../Assets/images/logo_with_uploaded_image (1).png"
