--- a/Pages/Client/account.html
+++ b/Pages/Client/account.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account</title>
     <link rel="stylesheet" href="../../Styles/Client/account.css" />
+    <link rel="stylesheet" href="../../Styles/Responsive/Client/account-responsive.css">
     <link
       rel="icon"
       href="../../Assets/images/logo_with_uploaded_image (1).png"
@@ -13,29 +14,29 @@
   </head>
   <body class="bg-dark text-light">
     <main class="account-body">
-      <div class="side-bar">
-        <figure>
-          <img
-            src="../../Assets/images/logo_with_uploaded_image (1).png"
-            alt=" filmalisaLogo"
-            class="main-logo"
-          />
-        </figure>
-
-        <nav class="logo_links">
-          <a href="./home.html" class="icon"
-            ><img src="../../Assets/icons/Client-login/home.svg" alt="" />
+      <div class="left">
+        <div class="logo-div">
+          <a href="../../index.html">
+            <img src="../../Assets/icons/user-home/logo-user.svg" alt="Logo" />
           </a>
-          <a href="./search.html" class="icon"
-            ><img src="../../Assets/icons/Client-login/movie.svg" alt=""
-          /></a>
-          <a href="./account.html" class="icon"
-            ><img src="../../Assets/icons/Client-login/tv.svg" alt="" class="icon-img"
-          /></a>
-          <a href="./favorite.html" class="icon"
-            ><img src="../../Assets/icons/Client-login/favorite.svg" alt=""
-          /></a>
-        </nav>
+        </div>
+        <div class="sidebar">
+          <a href="./home.html" class="icon">
+            <img src="../../Assets/icons/user-home/icon-1.svg" alt="Home" />
+          </a>
+          <a href="./search.html" class="icon">
+            <img src="../../Assets/icons/user-home/icon-2.svg" alt="Movies" />
+          </a>
+          <a href="./account.html" class="icon">
+            <img src="../../Assets/icons/user-home/icon-3.svg" alt="TV Shows" />
+          </a>
+          <a href="./favorite.html" class="icon">
+            <img
+              src="../../Assets/icons/user-home/icon-4.svg"
+              alt="Favorites"
+            />
+          </a>
+        </div>
       </div>
       <div class="right-part">
         <figure id="image-frame" class="image-frame">
