--- a/Pages/Client/search.html
+++ b/Pages/Client/search.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search</title>
     <link rel="stylesheet" href="../../Styles/Client/search.css" />
+    <link rel="stylesheet" href="../../Styles/Responsive/Client/search-responsive.css">
     <link
       rel="icon"
       href="../../Assets/images/logo_with_uploaded_image (1).png"
@@ -13,32 +14,29 @@
   </head>
   <body class="bg-dark text-light">
     <main class="client-login">
-      <div class="side-bar">
-        <figure>
-          <img
-            src="../../Assets/images/logo_with_uploaded_image (1).png"
-            alt=" filmalisaLogo"
-            class="main-logo"
-          />
-        </figure>
-
-        <nav class="logo_links">
-          <a href="../Client/home.html" class="icon"
-            ><img src="../../Assets/icons/Client-login/home.svg" alt="" />
+      <div class="left">
+        <div class="logo-div">
+          <a href="../../index.html">
+            <img src="../../Assets/icons/user-home/logo-user.svg" alt="Logo" />
           </a>
-          <a href="../Client/search.html" class="icon"
-            ><img
-              src="../../Assets/icons/Client-login/movie.svg"
-              alt=""
-              class="icon-img"
-          /></a>
-          <a href="../Client/account.html" class="icon"
-            ><img src="../../Assets/icons/Client-login/tv.svg" alt=""
-          /></a>
-          <a href="../Client/favorite.html" class="icon"
-            ><img src="../../Assets/icons/Client-login/favorite.svg" alt=""
-          /></a>
-        </nav>
+        </div>
+        <div class="sidebar">
+          <a href="./home.html" class="icon">
+            <img src="../../Assets/icons/user-home/icon-1.svg" alt="Home" />
+          </a>
+          <a href="./search.html" class="icon">
+            <img src="../../Assets/icons/user-home/icon-2.svg" alt="Movies" />
+          </a>
+          <a href="./account.html" class="icon">
+            <img src="../../Assets/icons/user-home/icon-3.svg" alt="TV Shows" />
+          </a>
+          <a href="./favorite.html" class="icon">
+            <img
+              src="../../Assets/icons/user-home/icon-4.svg"
+              alt="Favorites"
+            />
+          </a>
+        </div>
       </div>
     </main>
     <div>
@@ -56,10 +54,14 @@
               id="searchBar"
               placeholder="Search..."
             />
-            <img src="../../Assets/icons/search/button.svg" id="searchBtn" alt="" />
+            <img
+              src="../../Assets/icons/search/button.svg"
+              id="searchBtn"
+              alt=""
+            />
           </form>
         </div>
-        <div id="loadingIndicator" style="display:none;">
+        <div id="loadingIndicator" style="display: none">
           <p>Loading...</p>
         </div>
         <div class="movie-part" id="moviePart"></div>
